Working on rendering to the DOM

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -16,25 +16,30 @@
         <form>
             <table>
                 <tr>
-                    <td>
-                        <input id="display" type="text" disabled />
-                    </td>
+                    <td><input id="displayOne" type="number"/></td>
+                        <div id="operation">
+                            <td><input id="plusButton" type="button" value="+"></td>
+                            <td><input id="minusButton" type="button" value="-"></td>
+                            <td><input id="timesButton" type="button" value="*"></td>
+                            <td><input id="divideButton" type="button" value="/"></td>
+                        </div>    
+                    <td><input id="displayTwo" type="number"/></td>
+                    <td><input id="equalButton" type="button" value="="></td>
+                    <td><input id="clearButton" type="button" value="C"></td>
                 </tr>
-                <tr>
-                    <td><input id="" type="button" value="1"></td>
-                    <td><input id="" type="button" value="2"></td>
-                    <td><input id="" type="button" value="3"></td>
-                    <td><input id="add-button" type="button" value="+"></td>
-                    <td><input id="" type="button" value="="></td>
-                </tr>
+                <!-- <tr> -->
+                    <!-- <td><input class="pressButton" type="button" value="1"></td>
+                    <td><input class="pressButton" type="button" value="2"></td>
+                    <td><input class="pressButton" type="button" value="3"></td>
+                    <td><input class="pressButton" type="button" value="+"></td>
+                    <td><input class="pressButton" type="button" value="="></td> -->
+                <!-- </tr> -->
             </table>
-            
         </form>
     </section>
     <section>
-        <div>
-            
-        </div>
+        <div><h2>Answer: <span id="information"></span></h2></div>
+        <ul id="pastCalcs"></ul>
     </section>
 </body>
 </html>
