Got page to show information when clicking certain buttons

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -18,6 +18,7 @@
                 <tr>
                     <td><input id="displayOne" type="number"/></td>
                         <div id="operation">
+                            <!-- do theses need ids? test with and without -->
                             <td><input id="plusButton" type="button" value="+"></td>
                             <td><input id="minusButton" type="button" value="-"></td>
                             <td><input id="timesButton" type="button" value="*"></td>
