working on running function and redoing render

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -19,22 +19,15 @@
                     <td><input id="displayOne" type="number"/></td>
                         <div id="operation">
                             <!-- do theses need ids? test with and without -->
-                            <td><input id="plusButton" type="button" value="+"></td>
-                            <td><input id="minusButton" type="button" value="-"></td>
-                            <td><input id="timesButton" type="button" value="*"></td>
-                            <td><input id="divideButton" type="button" value="/"></td>
+                            <td><input class="functions" id="plusButton" type="button" value="+"></td>
+                            <td><input class="functions" id="minusButton" type="button" value="-"></td>
+                            <td><input class="functions" id="timesButton" type="button" value="*"></td>
+                            <td><input class="functions" id="divideButton" type="button" value="/"></td>
                         </div>    
                     <td><input id="displayTwo" type="number"/></td>
                     <td><input id="equalButton" type="button" value="="></td>
                     <td><input id="clearButton" type="button" value="C"></td>
                 </tr>
-                <!-- <tr> -->
-                    <!-- <td><input class="pressButton" type="button" value="1"></td>
-                    <td><input class="pressButton" type="button" value="2"></td>
-                    <td><input class="pressButton" type="button" value="3"></td>
-                    <td><input class="pressButton" type="button" value="+"></td>
-                    <td><input class="pressButton" type="button" value="="></td> -->
-                <!-- </tr> -->
             </table>
         </form>
     </section>
